# CourseMat

./: 2dGrid.cu  OpenMP_1.c  OpenMP_2.c  OpenMP_3.c  OpenMP_3_fixed.c  OpenMP_4.c  OpenMP_4_fixed.c  OpenMP_5.c  OpenMP_6.c  README.md  Wait_Test.c  addSimple.cu  addSimpleManaged.cu  addVector.cu  addVectorFixed.cu  addVectorKernels.c  addVectorLoop.c  buggy0.c  buggy1.c  buggy2.c  buggy3.c  cond.c  crc_slurm  create1.c  cudaError.cu  data.c  device.cu  devicePop.cu  ex4.c  gather.c  hello_world.cu  iread.c  laplace_acc.c  lost_in_sea.c  multi_stream.cu  mutex.c  pack0.c  pack1.c  read.c  readAll.c  (+20 more)
cmake/: CMakeLists.txt
cmake/CMakeModules/: FindMPI.cmake
cmake/doc/: Doxyfile
cmake/doc/html/: annotated.html  chunkedArray_8h_source.html  classChunkedArray-members.html  classChunkedArray.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  files.html  functions.html  functions_func.html
cmake/doc/html/search/: all_63.js  all_6f.js  classes_63.js  functions_63.js  functions_7e.js  search.js
cmake/doc/latex/: annotated.tex  classChunkedArray.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_b0856f6b0d80ccb263b2f415c91f9e17.tex  refman.tex
cmake/src/: chunkedArray.cpp  main.cpp
cmake/src/include/: chunkedArray.h
make/: CMakeLists.txt  Makefile  main.cpp
